test: Add new initial screen E2E tests (#2626)
Co-authored-by: Denis Nebytov <denis@emurgo.io>

--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -21,9 +21,10 @@
     "e2e:test:ios:yoroi:debug": "detox test $npm_package_e2ePath_ios --configuration ios.sim.yoroi.debug",
     "i18n:missed": "i18n-unused display-missed",
     "i18n:unused": "i18n-unused display-unused",
-    "lint": "yarn lint:typescript && prettylint \"src/**/*.tsx\" \"src/**/*.ts\" --config .prettierrc",
-    "lint:fix": "yarn lint:typescript --fix",
-    "lint:typescript": "eslint --max-warnings=0 ./src -c ./.eslintrc.js",
+    "lint": "yarn lint:typescript && yarn lint:pretty",
+    "lint:fix": "yarn lint:typescript --fix && yarn lint:pretty --fix",
+    "lint:pretty": "prettylint \"src/**/*.tsx\" \"src/**/*.ts\"  \"e2e/**/**.ts\" --config .prettierrc",
+    "lint:typescript": "eslint --max-warnings=0 ./src ./e2e -c ./.eslintrc.js",
     "manage-translations": "node ./translations/translation-runner.js",
     "metrics:pull": "ampli pull mobile",
     "metrics:status": "ampli status --instanceName=track",
