--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -126,6 +126,7 @@
     "@sentry/react-native": "^5.8.0",
     "@shopify/flash-list": "^1.4.1",
     "@unstoppabledomains/resolution": "6.0.3",
+    "@yoroi/banxa": "1.0.0",
     "@yoroi/swap": "1.0.0",
     "@yoroi/wallets": "1.0.0",
     "add": "2.0.6",
@@ -175,6 +176,7 @@
     "react-native-svg": "13.8.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-timezone": "^2.3.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-webview": "^11.25.0",
     "react-query": "^3.39.3",
     "reselect": "^4.0.0",
