--- a/packages/openswap/package.json
+++ b/packages/openswap/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-ft-flow": "^3.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "flowgen": "^1.21.0",
+    "jest": "^29.6.3",
     "prettier": "^3.0.0",
     "typescript": "5.0.4",
     "vitest": "0.31.1"
