--- a/packages/wallets/package.json
+++ b/packages/wallets/package.json
@@ -129,6 +129,7 @@
     ]
   },
   "dependencies": {
+    "@emurgo/cip14-js": "^3.0.1",
     "@react-native-async-storage/async-storage": "^1.19.2",
     "immer": "^10.0.2",
     "zod": "^3.22.1"
