wip: moved wallet things

--- a/apps/wallet-mobile/.env
+++ b/apps/wallet-mobile/.env
@@ -7,7 +7,7 @@ DISABLE_LOGBOX=true
 SHOW_PROD_POOLS_IN_DEV=true
 USE_TESTNET=true
 
-WALLET_1_MNEMONIC=abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon address
+WALLET_1_MNEMONIC=typical evoke despair burger ripple venue assist shoot donate alter twice bomb glimpse asthma explain
 WALLET_1_NETWORK_ID=300
 
 WALLET_2_NETWORK_ID=300
