--- a/packages/wallets/package.json
+++ b/packages/wallets/package.json
@@ -131,6 +131,7 @@
   "dependencies": {
     "@emurgo/cip14-js": "^3.0.1",
     "@react-native-async-storage/async-storage": "^1.19.2",
+    "axios": "^1.5.0",
     "immer": "^10.0.2",
     "zod": "^3.22.1"
   },
@@ -146,6 +147,7 @@
     "@types/react": "18.2.0",
     "@types/react-native": "0.71.6",
     "@yoroi/types": "1.0.4",
+    "axios-mock-adapter": "^1.21.5",
     "commitlint": "^17.0.2",
     "del-cli": "^5.0.0",
     "dependency-cruiser": "^13.1.1",
