--- a/packages/swap/package.json
+++ b/packages/swap/package.json
@@ -98,7 +98,8 @@
     "node_modules/",
     "lib/",
     "babel.config.js",
-    "jest.setup.js"
+    "jest.setup.js",
+    "coverage/"
   ],
   "jest": {
     "modulePathIgnorePatterns": [
@@ -108,6 +109,24 @@
     "preset": "react-native",
     "setupFiles": [
       "<rootDir>/jest.setup.js"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!src/**/*.d.ts",
+      "!src/**/*.mocks.{js,jsx,ts,tsx}"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "functions": 100,
+        "lines": 100,
+        "statements": 100
+      }
+    },
+    "collectCoverage": true,
+    "coverageReporters": [
+      "text-summary",
+      "html"
     ]
   },
   "dependencies": {
@@ -121,6 +140,7 @@
     "@react-native-community/eslint-config": "^3.0.2",
     "@release-it/conventional-changelog": "^5.0.0",
     "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react-native": "^12.3.0",
     "@types/jest": "^28.1.2",
     "@types/react": "18.2.0",
     "@types/react-native": "0.71.6",
@@ -133,7 +153,7 @@
     "eslint-plugin-ft-flow": "^3.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "flowgen": "^1.21.0",
-    "jest": "^28.1.1",
+    "jest": "^29.7.0",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "18.2.0",
