--- a/packages/wallets/package.json
+++ b/packages/wallets/package.json
@@ -119,7 +119,7 @@
         "branches": 100,
         "functions": 100,
         "lines": 100,
-        "statements":100 
+        "statements": 100
       }
     },
     "collectCoverage": true,
@@ -140,6 +140,7 @@
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react-native": "^12.3.0",
     "@types/jest": "^28.1.2",
     "@types/react": "18.2.0",
     "@types/react-native": "0.71.6",
