--- a/apps/wallet-mobile/tsconfig.json
+++ b/apps/wallet-mobile/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@tsconfig/react-native/tsconfig.json",
   "compilerOptions": {
+    "noErrorTruncation": true,
     "allowJs": false,
     "lib": ["es2019", "dom"],
     "moduleResolution": "node",
