Use new csl local version

--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -105,8 +105,8 @@
     "@cardano-foundation/ledgerjs-hw-app-cardano": "^6.0.0",
     "@emurgo/cip14-js": "^3.0.1",
     "@emurgo/cip4-js": "1.0.7",
-    "@emurgo/cross-csl-core": "^2.9.0",
-    "@emurgo/cross-csl-mobile": "^2.9.0",
+    "@emurgo/cross-csl-core": "file:/Users/michalszorad/Desktop/cross-csl/packages/cross-csl-core",
+    "@emurgo/cross-csl-mobile": "file:/Users/michalszorad/Desktop/cross-csl/packages/cross-csl-mobile",
     "@emurgo/csl-mobile-bridge": "^5.1.2",
     "@emurgo/react-native-blockies-svg": "^0.0.2",
     "@emurgo/react-native-hid": "^5.15.6",
