Fix type issues

--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -110,7 +110,7 @@
     "@emurgo/csl-mobile-bridge": "^5.1.2",
     "@emurgo/react-native-blockies-svg": "^0.0.2",
     "@emurgo/react-native-hid": "^5.15.6",
-    "@emurgo/yoroi-lib": "^0.8.1",
+    "@emurgo/yoroi-lib": "file:/Users/michalszorad/Desktop/yoroi-lib",
     "@formatjs/intl-datetimeformat": "^6.7.0",
     "@formatjs/intl-getcanonicallocales": "^2.1.0",
     "@formatjs/intl-locale": "^3.2.1",
@@ -139,7 +139,7 @@
     "add": "2.0.6",
     "assert": "^2.0.0",
     "base-64": "^1.0.0",
-    "bignumber.js": "^9.0.0",
+    "bignumber.js": "9.0.1",
     "bip39": "2.5.0",
     "blake2b": "2.1.3",
     "bs58": "^4.0.1",
@@ -212,7 +212,7 @@
     "@babel/runtime": "^7.20.0",
     "@config-plugins/detox": "^5.0.1",
     "@emurgo/cardano-serialization-lib-nodejs": "^9.1.4",
-    "@emurgo/cross-csl-nodejs": "^2.7.0",
+    "@emurgo/cross-csl-nodejs": "file:/Users/michalszorad/Desktop/cross-csl/packages/cross-csl-nodejs",
     "@formatjs/cli": "^6.1.0",
     "@formatjs/ts-transformer": "^3.13.0",
     "@react-navigation/devtools": "^6.0.13",
