--- a/apps/wallet-mobile/android/app/src/main/AndroidManifest.xml
+++ b/apps/wallet-mobile/android/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
         android:launchMode="singleTask"
-        android:windowSoftInputMode="adjustPan"
+        android:windowSoftInputMode="adjustResize"
         android:screenOrientation="portrait"
         android:exported="true">
         <intent-filter>
