chore: bump rn iOS 17

--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -158,7 +158,7 @@
     "react": "18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-intl": "^6.4.1",
-    "react-native": "0.71.6",
+    "react-native": "~0.71.0",
     "react-native-background-timer": "2.4.1",
     "react-native-ble-plx": "^2.0.3",
     "react-native-bootsplash": "^4.6.0",
