--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -158,7 +158,7 @@
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "~0.71.0",
     "react-native-builder-bob": "^0.20.4",
     "react-query": "^3.39.3",
     "react-test-renderer": "^18.2.0",
