--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -6,29 +6,16 @@
     "android-bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "build": "yarn lint && yarn tsc && yarn test",
     "dgraph": "depcruise src --include-only \"^src\" --output-type dot | dot -T svg > dependency-graph.svg",
-    "e2e:build:android:dev:debug": "detox build --configuration android.emu.dev.debug",
-    "e2e:build:android:nightly:debug": "detox build --configuration android.emu.nightly.debug",
-    "e2e:build:android:nightly:release": "detox build --configuration android.emu.nightly.release",
-    "e2e:build:ios:nightly:debug": "$npm_package_setEnvDetox && detox build --configuration ios.sim.nightly.debug",
-    "e2e:build:ios:nightly:release": "$npm_package_setEnvDetox && detox build --configuration ios.sim.nightly.release",
-    "e2e:build:ios:yoroi:debug": "$npm_package_setEnvDetox && detox build --configuration ios.sim.yoroi.debug",
-    "e2e:test:all:nightly:debug": "yarn e2e:test:android:nightly:debug & yarn e2e:test:ios:nightly:debug",
-    "e2e:test:android:dev:debug": "detox test $npm_package_e2ePath_android --configuration android.emu.dev.debug",
-    "e2e:test:android:nightly:debug": "detox test $npm_package_e2ePath_android --configuration android.emu.nightly.debug",
-    "e2e:test:android:nightly:release": "detox test $npm_package_e2ePath_android --configuration android.emu.nightly.release",
-    "e2e:test:ios:nightly:debug": "detox test $npm_package_e2ePath_ios --configuration ios.sim.nightly.debug",
-    "e2e:test:ios:nightly:release": "detox test $npm_package_e2ePath_ios --configuration ios.sim.nightly.release",
-    "e2e:test:ios:yoroi:debug": "detox test $npm_package_e2ePath_ios --configuration ios.sim.yoroi.debug",
     "i18n:missed": "i18n-unused display-missed",
     "i18n:unused": "i18n-unused display-unused",
     "lint": "yarn lint:typescript && yarn lint:pretty",
     "lint:fix": "yarn lint:typescript --fix && yarn lint:pretty --fix",
-    "lint:pretty": "prettylint \"src/**/*.tsx\" \"src/**/*.ts\"  \"e2e/**/**.ts\" --config .prettierrc",
-    "lint:typescript": "eslint --max-warnings=0 ./src ./e2e -c ./.eslintrc.js",
+    "lint:pretty": "prettylint \"src/**/*.tsx\" \"src/**/*.ts\" --config .prettierrc",
+    "lint:typescript": "eslint --max-warnings=0 ./src -c ./.eslintrc.js",
     "manage-translations": "node ./translations/translation-runner.js",
     "metrics:pull": "ampli pull mobile",
     "metrics:status": "ampli status --instanceName=track",
-    "prettify": "prettier --write ./src ./e2e ./storybook ./translations --config .prettierrc",
+    "prettify": "prettier --write ./src ./storybook ./translations --config .prettierrc",
     "purge-translations": "rimraf ./translations/messages",
     "prerelease:android:nightly": "bundle install && ./scripts/update-commit.sh",
     "release:android:nightly": "bundle exec fastlane android release --env nightly",
@@ -210,7 +197,6 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/preset-react": "^7.16.7",
     "@babel/runtime": "^7.20.0",
-    "@config-plugins/detox": "^5.0.1",
     "@emurgo/cardano-serialization-lib-nodejs": "^9.1.4",
     "@emurgo/cross-csl-nodejs": "^3.1.0",
     "@formatjs/cli": "^6.1.0",
@@ -292,15 +278,10 @@
     "yargs": "^17.7.2"
   },
   "engineStrict": true,
-  "e2ePath": {
-    "ios": "./e2e/tests/_ios",
-    "android": "./e2e/tests/_android"
-  },
   "engine": {
     "node": "~16.19.0",
     "npm": "~7.19.1"
   },
-  "setEnvDetox": "export TARGET_DEVICE_PLATFORM_NAME=iphonesimulator",
   "ts-node": {
     "compilerOptions": {
       "module": "commonjs"
