--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e2e",
+  "name": "@yoroi/e2e",
   "version": "1.0.0",
   "description": "e2e tests using detox",
   "main": "index.js",
@@ -19,17 +19,64 @@
     "e2e:test:ios:nightly:debug": "detox test $npm_package_e2ePath_ios --configuration ios.sim.nightly.debug",
     "e2e:test:ios:nightly:release": "detox test $npm_package_e2ePath_ios --configuration ios.sim.nightly.release",
     "e2e:test:ios:yoroi:debug": "detox test $npm_package_e2ePath_ios --configuration ios.sim.yoroi.debug",
-    "lint": "yarn lint:typescript && yarn lint:pretty",
-    "lint:fix": "yarn lint:typescript --fix && yarn lint:pretty --fix",
-    "lint:pretty": "prettylint \"e2e/**/**.ts\" --config .prettierrc",
-    "lint:typescript": "eslint --max-warnings=0 ./src ./e2e -c ./.eslintrc.js",
-    "prettify": "prettier --write ./src ./e2e ./storybook ./translations --config .prettierrc",
-    "build": "yarn e2e:build:ios:nightly:debug"
+    "lint": "eslint \"**/*.{js,ts,tsx}\"",
+    "lint:fix": "yarn lint --fix",
+    "build": "yarn lint"
   },
   "dependencies": {
     "detox": "^20.11.0",
     "jest": "^29",
     "jest-circus": "^29.5.0",
     "jest-html-reporters": "^3.1.4"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "eslint": "^8.51.0",
+    "eslint-plugin-react": "^7.33.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@react-native-community",
+      "prettier"
+    ],
+    "rules": {
+      "prettier/prettier": [
+        "error",
+        {
+          "quoteProps": "consistent",
+          "bracketSpacing": false,
+          "singleQuote": true,
+          "tabWidth": 1,
+          "trailingComma": "all",
+          "useTabs": false,
+          "semi": false
+        }
+      ]
+    },
+    "root": true
+  },
+  "prettier": {
+    "bracketSpacing": false,
+    "quoteProps": "consistent",
+    "semi": false,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "all",
+    "useTabs": false
+  },
+  "eslintIgnore": [
+    "node_modules/",
+    "jest.config.js"
+  ],
+  "e2ePath": {
+    "ios": "./e2e/tests/_ios",
+    "android": "./e2e/tests/_android"
+  },
+  "setEnvDetox": "export TARGET_DEVICE_PLATFORM_NAME=iphonesimulator",
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs"
+    }
   }
 }
