--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -3,8 +3,6 @@
   "version": "1.0.0",
   "description": "e2e tests using detox",
   "main": "index.js",
-  "author": "Rahul",
-  "license": "MIT",
   "scripts": {
     "e2e:build:android:dev:debug": "detox build --configuration android.emu.dev.debug",
     "e2e:build:android:nightly:debug": "detox build --configuration android.emu.nightly.debug",
@@ -23,20 +21,14 @@
     "lint:fix": "yarn lint --fix",
     "build": "yarn lint"
   },
-  "dependencies": {
-    "detox": "^20.11.0",
-    "jest": "^29",
-    "jest-circus": "^29.5.0",
-    "jest-html-reporters": "^3.1.4"
-  },
-  "devDependencies": {
-    "@babel/preset-typescript": "^7.23.2",
-    "@types/jest": "^29.5.5",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
-    "eslint": "^8.51.0",
-    "eslint-plugin-react": "^7.33.2",
-    "ts-jest": "^29.1.1"
+  "prettier": {
+    "bracketSpacing": false,
+    "quoteProps": "consistent",
+    "semi": false,
+    "singleQuote": true,
+    "tabWidth": 1,
+    "trailingComma": "all",
+    "useTabs": false
   },
   "eslintConfig": {
     "extends": [
@@ -59,21 +51,32 @@
     },
     "root": true
   },
-  "prettier": {
-    "bracketSpacing": false,
-    "quoteProps": "consistent",
-    "semi": false,
-    "singleQuote": true,
-    "tabWidth": 2,
-    "trailingComma": "all",
-    "useTabs": false
-  },
   "eslintIgnore": [
     "node_modules/",
-    "jest.config.js"
+    "artifacts",
+    "babel.config.js",
+    "jest.config.js",
+    "html-report"
   ],
+  "dependencies": {
+    "detox": "^20.11.0",
+    "jest": "^29",
+    "jest-circus": "^29.5.0",
+    "jest-html-reporters": "^3.1.4"
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.23.2",
+    "@types/jest": "^29.5.5",
+    "prettier": "^3.0.0",
+    "typescript": "5.0.4",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-ft-flow": "^3.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "ts-jest": "^29.1.1"
+  },
   "e2ePath": {
-    "ios": "./tests/_ios_test",
+    "ios": "./tests/_ios",
     "android": "./tests/_android"
   },
   "setEnvDetox": "export TARGET_DEVICE_PLATFORM_NAME=iphonesimulator",
