--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@yoroi/cardano",
+  "name": "@yoroi/api",
   "version": "1.0.0",
   "description": "The Cardano package of Yoroi SDK",
   "keywords": [
