--- a/packages/swap/package.json
+++ b/packages/swap/package.json
@@ -132,6 +132,7 @@
   },
   "dependencies": {
     "@emurgo/cip14-js": "^3.0.1",
+    "@yoroi/api": "1.0.0",
     "@yoroi/openswap": "0.0.1",
     "immer": "^10.0.2"
   },
