--- a/packages/openswap/package.json
+++ b/packages/openswap/package.json
@@ -13,9 +13,13 @@
   "scripts": {
     "flow": ". ./scripts/flowgen.sh",
     "dgraph": "depcruise src --include-only \"^src\" --output-type dot | dot -T svg > dependency-graph.svg",
-    "publish:beta": "yarn build && npm publish --scope yoroi --tag beta --access beta",
-    "publish:prod": "yarn build && npm publish --scope yoroi --access public",
+    "prepack": "yarn build:release",
+    "prepublish:beta": "yarn build:release",
+    "publish:beta": "npm publish --scope yoroi --tag beta --access beta",
+    "prepublish:prod": "yarn build:release",
+    "publish:prod": "npm publish --scope yoroi --access public",
     "build": "yarn tsc && yarn lint && yarn test && yarn clean && tsc --project tsconfig.json",
+    "build:release": "yarn build && yarn flow",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "tsc": "tsc --noEmit -p tsconfig.json",
     "clean": "rm -rf dist",
