--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -97,7 +97,7 @@
     "@emurgo/csl-mobile-bridge": "^5.1.2",
     "@emurgo/react-native-blockies-svg": "^0.0.2",
     "@emurgo/react-native-hid": "^5.15.6",
-    "@emurgo/yoroi-lib": "^0.11.0",
+    "@emurgo/yoroi-lib": "/Users/michalszorad/Desktop/yoroi-lib",
     "@formatjs/intl-datetimeformat": "^6.7.0",
     "@formatjs/intl-getcanonicallocales": "^2.1.0",
     "@formatjs/intl-locale": "^3.2.1",
@@ -119,8 +119,8 @@
     "@sentry/react-native": "^5.8.0",
     "@shopify/flash-list": "^1.4.1",
     "@unstoppabledomains/resolution": "6.0.3",
-    "@yoroi/banxa": "1.1.0",
     "@yoroi/api": "1.1.0",
+    "@yoroi/banxa": "1.1.0",
     "@yoroi/common": "1.1.0",
     "@yoroi/swap": "1.1.0",
     "add": "2.0.6",
