--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -94,7 +94,7 @@
     "@emurgo/cip4-js": "1.0.7",
     "@emurgo/cross-csl-core": "^3.1.0",
     "@emurgo/cross-csl-mobile": "^3.1.0",
-    "@emurgo/csl-mobile-bridge": "5.1.3-beta.2",
+    "@emurgo/csl-mobile-bridge": "5.1.3",
     "@emurgo/react-native-blockies-svg": "^0.0.2",
     "@emurgo/react-native-hid": "^5.15.6",
     "@emurgo/yoroi-lib": "^0.11.0",
