refactor: replaced the token list source

--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,9 @@
 {
   "npmClient": "yarn",
-  "version": "independent"
+  "version": "independent",
+  "command": {
+    "run": {
+      "ignore": ["e2e/*"]
+    }
+  }
 }
