--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -121,6 +121,7 @@
     "@unstoppabledomains/resolution": "6.0.3",
     "@yoroi/banxa": "1.2.0",
     "@yoroi/api": "1.2.0",
+    "@yoroi/resolver": "1.0.0",
     "@yoroi/common": "1.2.0",
     "@yoroi/swap": "1.2.0",
     "add": "2.0.6",
