--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -156,6 +156,7 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-keychain": "7.0.0",
     "react-native-linear-gradient": "2.5.6",
+    "react-native-localize": "^3.0.2",
     "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^4.12.0",
