--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -97,7 +97,7 @@
     "@emurgo/csl-mobile-bridge": "^5.1.3",
     "@emurgo/react-native-blockies-svg": "^0.0.2",
     "@emurgo/react-native-hid": "^5.15.6",
-    "@emurgo/yoroi-lib": "/Users/michalszorad/Desktop/yoroi-lib",
+    "@emurgo/yoroi-lib": "^0.13.0",
     "@formatjs/intl-datetimeformat": "^6.7.0",
     "@formatjs/intl-getcanonicallocales": "^2.1.0",
     "@formatjs/intl-locale": "^3.2.1",
