chore: added @yoroi/links package

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       "packages/types",
       "packages/openswap",
       "packages/common",
+      "packages/links",
       "packages/api",
       "packages/*",
       "apps/*",
