--- a/packages/staking/package.json
+++ b/packages/staking/package.json
@@ -95,7 +95,7 @@
     "node_modules/",
     "lib/",
     "babel.config.js",
-    "jest.setup.js",
+    "jest.setup.ts",
     "coverage/"
   ],
   "jest": {
@@ -122,15 +122,20 @@
     ],
     "preset": "react-native",
     "setupFiles": [
-      "<rootDir>/jest.setup.js"
+      "<rootDir>/jest.setup.ts"
     ]
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "bip39": "^3.1.0",
+    "blake2b": "^2.1.4",
+    "chacha": "^2.1.0",
+    "pbkdf2": "^3.1.2",
+    "react-native-randombytes": "^3.6.1",
     "zod": "^3.22.1"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-env": "^7.23.3",
     "@babel/preset-typescript": "^7.23.2",
     "@commitlint/config-conventional": "^17.0.2",
     "@react-native-async-storage/async-storage": "^1.19.3",
@@ -140,6 +145,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/react-native": "^12.3.0",
+    "@types/blake2b": "^2.1.3",
     "@types/jest": "^28.1.2",
     "@types/react": "18.2.0",
     "@types/react-native": "0.71.6",
