--- a/packages/staking/package.json
+++ b/packages/staking/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@yoroi/staking",
   "version": "1.3.0",
-  "description": "The staking package of Yoroi SDK",
+  "description": "The Staking package of Yoroi SDK",
   "keywords": [
     "yoroi",
     "cardano",
@@ -43,6 +43,7 @@
     "build": "yarn tsc && yarn lint && yarn test --ci --silent && yarn clean && bob build",
     "build:release": "yarn build && yarn flow",
     "clean": "del-cli lib",
+    "dev": "yarn clean && bob build",
     "dgraph": "depcruise src --include-only \"^src\" --output-type dot | dot -T svg > dependency-graph.svg",
     "flow": ". ./scripts/flowgen.sh",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
@@ -53,7 +54,7 @@
     "publish:prod": "npm publish --scope yoroi --access public",
     "release": "release-it",
     "test": "jest",
-    "test:watch": "jest --watch --debug",
+    "test:watch": "jest --watch",
     "tsc": "tsc --noEmit -p tsconfig.json"
   },
   "commitlint": {
@@ -95,14 +96,15 @@
     "node_modules/",
     "lib/",
     "babel.config.js",
-    "jest.setup.ts",
+    "jest.setup.js",
     "coverage/"
   ],
   "jest": {
     "collectCoverage": true,
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
+      "!src/**/*.d.ts",
+      "!src/**/*.mocks.{js,jsx,ts,tsx}"
     ],
     "coverageReporters": [
       "text-summary",
@@ -110,10 +112,10 @@
     ],
     "coverageThreshold": {
       "global": {
-        "branches": 100,
-        "functions": 100,
-        "lines": 100,
-        "statements": 100
+        "branches": 50,
+        "functions": 50,
+        "lines": 50,
+        "statements": 50
       }
     },
     "modulePathIgnorePatterns": [
@@ -122,21 +124,17 @@
     ],
     "preset": "react-native",
     "setupFiles": [
-      "<rootDir>/jest.setup.ts"
+      "<rootDir>/jest.setup.js"
     ]
   },
   "dependencies": {
-    "axios": "^1.5.0",
+    "@emurgo/cip14-js": "^3.0.1",
+    "@yoroi/api": "1.3.0",
+    "@yoroi/openswap": "1.3.0",
     "bip39": "^3.1.0",
-    "blake2b": "^2.1.4",
-    "chacha": "^2.1.0",
-    "pbkdf2": "^3.1.2",
-    "react-native-randombytes": "^3.6.1",
-    "zod": "^3.22.1"
+    "immer": "^10.0.2"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.2",
     "@commitlint/config-conventional": "^17.0.2",
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/eslint-config": "^3.0.2",
@@ -159,7 +157,7 @@
     "eslint-plugin-ft-flow": "^3.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "flowgen": "^1.21.0",
-    "jest": "^28.1.1",
+    "jest": "^29.7.0",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "18.2.0",
@@ -174,6 +172,9 @@
     "@react-native-async-storage/async-storage": ">= 1.19.3 <= 1.20.0",
     "react": ">= 16.8.0 <= 19.0.0",
     "react-query": "^3.39.3"
+  },
+  "optionalDependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.3"
   },
   "packageManager": "^yarn@1.22.15",
   "engines": {
