--- a/packages/staking/package.json
+++ b/packages/staking/package.json
@@ -128,6 +128,7 @@
     ]
   },
   "dependencies": {
+    "@cardano-sdk/util": "^0.14.2",
     "@emurgo/cip14-js": "^3.0.1",
     "@yoroi/api": "1.3.0",
     "@yoroi/openswap": "1.3.0",
