--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -123,6 +123,7 @@
     "@yoroi/banxa": "1.3.0",
     "@yoroi/common": "1.3.0",
     "@yoroi/swap": "1.3.0",
+    "@yoroi/staking": "1.0.0",
     "add": "2.0.6",
     "assert": "^2.0.0",
     "base-64": "^1.0.0",
