--- a/packages/banxa/package.json
+++ b/packages/banxa/package.json
@@ -170,7 +170,7 @@
   "optionalDependencies": {
     "@react-native-async-storage/async-storage": "^1.18.1"
   },
-  "packageManager": "^yarn@1.22.21",
+  "packageManager": "yarn@1.22.21",
   "engines": {
     "node": ">= 16.19.0"
   },
