feature(resolver): add test

--- a/packages/resolver/package.json
+++ b/packages/resolver/package.json
@@ -128,7 +128,8 @@
     },
     "modulePathIgnorePatterns": [
       "<rootDir>/example/node_modules",
-      "<rootDir>/lib/"
+      "<rootDir>/lib/",
+      "<rootDir>/.*mock.*"
     ],
     "setupFiles": [
       "<rootDir>/jest.setup.js"
