--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -122,6 +122,7 @@
     "@yoroi/api": "1.3.0",
     "@yoroi/banxa": "1.3.0",
     "@yoroi/common": "1.3.0",
+    "@yoroi/links": "1.3.0",
     "@yoroi/swap": "1.3.0",
     "add": "2.0.6",
     "assert": "^2.0.0",
