--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -59,6 +59,7 @@
     "collectCoverage": true,
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,ts,tsx}",
+      "!src/**/*.stories.{js,jsx,ts,tsx}",
       "!src/**/*.d.ts"
     ],
     "coverageReporters": [
