--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -6,6 +6,7 @@
     "android-bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "build": "yarn lint && yarn tsc && yarn test",
     "dgraph": "depcruise src --include-only \"^src\" --output-type dot | dot -T svg > dependency-graph.svg",
+    "generate:barcodes": "node scripts/build-testing-codes.sh",
     "i18n:missed": "i18n-unused display-missed",
     "i18n:unused": "i18n-unused display-unused",
     "lint": "yarn lint:typescript && yarn lint:pretty",
@@ -59,6 +60,7 @@
     "collectCoverage": true,
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,ts,tsx}",
+      "!src/**/*.stories.{js,jsx,ts,tsx}",
       "!src/**/*.d.ts"
     ],
     "coverageReporters": [
@@ -122,6 +124,7 @@
     "@yoroi/api": "1.3.0",
     "@yoroi/banxa": "1.3.0",
     "@yoroi/common": "1.3.0",
+    "@yoroi/links": "1.3.0",
     "@yoroi/swap": "1.3.0",
     "add": "2.0.6",
     "assert": "^2.0.0",
