--- a/packages/swap/package.json
+++ b/packages/swap/package.json
@@ -52,6 +52,7 @@
     "dev": "yarn clean && bob build",
     "dgraph": "depcruise src --include-only \"^src\" --output-type dot | dot -T svg > dependency-graph.svg",
     "flow": ". ./scripts/flowgen.sh",
+    "generate-dexhunter-api": "swagger-typescript-api --union-enums --api-class-name DexHunter -p https://api.dexhunter.app/swagger/doc.json -o ./src/adapters/dexhunter-api -n dexhunter.ts",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "prepack": "yarn build:release",
     "prepublish:beta": "yarn build:release",
@@ -167,6 +168,7 @@
     "react-query": "^3.39.3",
     "react-test-renderer": "^18.2.0",
     "release-it": "^15.0.0",
+    "swagger-typescript-api": "^13.0.3",
     "typescript": "^4.5.2"
   },
   "peerDependencies": {
