--- a/packages/resolver/package.json
+++ b/packages/resolver/package.json
@@ -138,8 +138,9 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.5",
     "@unstoppabledomains/resolution": "^9.2.2",
-    "zod": "^3.22.2",
-    "@yoroi/common": "1.3.0"
+    "@yoroi/common": "1.3.0",
+    "react-query": "^3.39.3",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
