chore: minor refactor

--- a/packages/resolver/package.json
+++ b/packages/resolver/package.json
@@ -112,6 +112,7 @@
     "collectCoverage": true,
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,ts,tsx}",
+      "!src/**/*.mocks.{js,jsx,ts,tsx}",
       "!src/**/*.d.ts"
     ],
     "coverageReporters": [
