--- a/packages/resolver/package.json
+++ b/packages/resolver/package.json
@@ -129,24 +129,24 @@
     },
     "modulePathIgnorePatterns": [
       "<rootDir>/example/node_modules",
-      "<rootDir>/lib/",
-      "<rootDir>/.*mock.*"
+      "<rootDir>/lib/"
     ],
+    "preset": "react-native",
     "setupFiles": [
       "<rootDir>/jest.setup.js"
     ]
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.5",
-    "@unstoppabledomains/resolution": "^9.2.2",
     "@yoroi/common": "1.3.0",
-    "react-query": "^3.39.3",
     "zod": "^3.22.2"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/eslint-config": "^3.0.2",
     "@release-it/conventional-changelog": "^5.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react-native": "^12.3.0",
     "@types/jest": "^28.1.2",
     "@yoroi/types": "1.3.0",
     "commitlint": "^17.0.2",
@@ -160,11 +160,16 @@
     "jest": "^28.1.1",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.0.5",
+    "react": "18.2.0",
+    "react-native": "~0.71.0",
     "react-native-builder-bob": "^0.20.4",
+    "react-query": "^3.39.3",
+    "react-test-renderer": "^18.2.0",
     "release-it": "^15.0.0",
-    "typescript": "^4.5.2"
+    "typescript": "4.8.4"
   },
   "peerDependencies": {
+    "@react-native-async-storage/async-storage": ">= 1.19.3 <= 1.20.0",
     "react": ">= 16.8.0 <= 19.0.0",
     "react-query": "^3.39.3"
   },
