--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -96,7 +96,7 @@
     "@emurgo/cip4-js": "1.0.7",
     "@emurgo/cross-csl-core": "^4.0.0-alpha.1",
     "@emurgo/cross-csl-mobile": "^4.0.0-alpha.1",
-    "@emurgo/csl-mobile-bridge": "5.1.3",
+    "@emurgo/csl-mobile-bridge": "6.0.0-alpha.2",
     "@emurgo/react-native-blockies-svg": "^0.0.2",
     "@emurgo/react-native-hid": "^5.15.6",
     "@emurgo/yoroi-lib": "^0.14.0",
