--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -99,7 +99,7 @@
     "@emurgo/csl-mobile-bridge": "6.0.0-alpha.2",
     "@emurgo/react-native-blockies-svg": "^0.0.2",
     "@emurgo/react-native-hid": "^5.15.6",
-    "@emurgo/yoroi-lib": "^0.14.0",
+    "@emurgo/yoroi-lib": "/Users/michalszorad/Desktop/yoroi-lib",
     "@formatjs/intl-datetimeformat": "^6.7.0",
     "@formatjs/intl-getcanonicallocales": "^2.1.0",
     "@formatjs/intl-locale": "^3.2.1",
@@ -125,8 +125,8 @@
     "@yoroi/banxa": "1.3.0",
     "@yoroi/common": "1.3.0",
     "@yoroi/links": "1.3.0",
-    "@yoroi/swap": "1.3.0",
     "@yoroi/staking": "1.0.0",
+    "@yoroi/swap": "1.3.0",
     "add": "2.0.6",
     "assert": "^2.0.0",
     "base-64": "^1.0.0",
