--- a/packages/resolver/package.json
+++ b/packages/resolver/package.json
@@ -138,6 +138,7 @@
   },
   "dependencies": {
     "@yoroi/common": "1.3.0",
+    "axios": "^1.5.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
