--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -167,7 +167,7 @@
         "react": ">= 16.8.0 <= 19.0.0",
         "react-query": "^3.39.3"
     },
-    "packageManager": "^yarn@1.22.15",
+    "packageManager": "yarn@1.22.21",
     "engines": {
         "node": ">= 16.19.0"
     },
