--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -257,6 +257,7 @@
     "i18n-unused": "^0.8.0",
     "lint-staged": "^13.2.2",
     "metro-react-native-babel-preset": "0.73.9",
+    "mockdate": "^3.0.5",
     "node-fetch": "<3",
     "pod-install": "^0.1.38",
     "prettier": "^2.4.1",
