--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -97,7 +97,7 @@
     "@emurgo/cross-csl-core": "^3.1.0",
     "@emurgo/cross-csl-mobile": "^3.1.0",
     "@emurgo/csl-mobile-bridge": "5.1.3",
-    "@emurgo/react-native-blockies-svg": "^0.0.2",
+    "@emurgo/react-native-blockies-svg": "file:/Users/lisicky/svc/react-native-blockies-svg",
     "@emurgo/react-native-hid": "^5.15.6",
     "@emurgo/yoroi-lib": "^0.11.0",
     "@formatjs/intl-datetimeformat": "^6.7.0",
@@ -108,9 +108,9 @@
     "@formatjs/intl-relativetimeformat": "^11.2.1",
     "@gorhom/bottom-sheet": "^4",
     "@ledgerhq/react-native-hw-transport-ble": "6.27.3",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/clipboard": "^1.5.1",
-    "@react-native-community/datetimepicker": "^7.1.0",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/slider": "^4.4.2",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/bottom-tabs": "^6.4.3",
@@ -118,7 +118,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/routers": "^6.1.5",
     "@react-navigation/stack": "^6.3.16",
-    "@sentry/react-native": "^5.8.0",
+    "@sentry/react-native": "5.10.0",
     "@shopify/flash-list": "^1.4.1",
     "@unstoppabledomains/resolution": "6.0.3",
     "@yoroi/api": "1.3.0",
@@ -138,17 +138,18 @@
     "crypto-random-string": "3.3.0",
     "es6-error": "^4.1.1",
     "es6-symbol": "3.1.3",
-    "expo": ">=48.0.0-0 <49.0.0",
-    "expo-barcode-scanner": "~12.3.2",
-    "expo-camera": "^13.2.1",
+    "expo": "49",
+    "expo-barcode-scanner": "~12.5.3",
+    "expo-camera": "~13.4.4",
     "expo-device": "^5.4.0",
-    "expo-status-bar": "~1.4.4",
+    "expo-image": "~1.10.1",
+    "expo-status-bar": "~1.6.0",
     "jsc-android": "241213.1.0",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-intl": "^6.4.1",
-    "react-native": "~0.71.0",
+    "react-native": "0.72.6",
     "react-native-background-timer": "2.4.1",
     "react-native-ble-plx": "^2.0.3",
     "react-native-bootsplash": "^4.6.0",
@@ -168,17 +169,17 @@
     "react-native-quick-base64": "^2.0.6",
     "react-native-randombytes": "3.6.0",
     "react-native-reanimated": "^3.1.0",
-    "react-native-safe-area-context": "^4.5.1",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "^3.20.0",
     "react-native-skeleton-placeholder": "^5.2.0",
-    "react-native-svg": "13.8.0",
+    "react-native-svg": "13.10.0",
     "react-native-tab-view": "^3.1.1",
-    "react-native-timezone": "^2.3.0",
+    "react-native-timezone": "^3.0.1",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-webview": "^11.25.0",
+    "react-native-webview": "13.2.2",
     "react-query": "^3.39.3",
     "reselect": "^4.0.0",
-    "sentry-expo": "^7.0.1",
+    "sentry-expo": "~7.1.0",
     "stream-browserify": "3.0.0",
     "tinycolor2": "1.4.2",
     "url": "^0.11.0",
@@ -227,7 +228,7 @@
     "@types/lodash": "^4.14.175",
     "@types/mocha": "^10.0.0",
     "@types/node": "^16.18.27",
-    "@types/react": "18.2.0",
+    "@types/react": "~18.2.14",
     "@types/react-native": "0.71.6",
     "@types/react-native-background-timer": "^2.0.0",
     "@types/react-test-renderer": "^18.0.0",
@@ -263,7 +264,7 @@
     "prettylint": "^1.0.0",
     "react-addons-test-utils": "^15.6.2",
     "react-devtools-core": "4.26.1",
-    "react-dom": "16.8.3",
+    "react-dom": "18.2.0",
     "react-intl-translations-manager": "^5.0.3",
     "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "18.2.0",
@@ -271,9 +272,12 @@
     "ts-jest": "^29.1.0",
     "ts-node": "^10.7.0",
     "ts-sinon": "^2.0.2",
-    "typescript": "4.8.4",
+    "typescript": "^5.1.3",
     "typescript-coverage-report": "^0.6.4",
     "yargs": "^17.7.2"
+  },
+  "resolutions": {
+    "react-native-svg": "13.10.0"
   },
   "engineStrict": true,
   "engine": {
